--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Lauri Gustafsson <me@gustafla.space>"]
 edition = "2018"
 
 [dependencies]
+crossbeam = "0.8.0"
 glam = "0.15.2"
 image = "0.23.14"
 num_cpus = "1.13.0"
