--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ crossbeam = "0.8.0"
 glam = "0.15.2"
 image = "0.23.14"
 num_cpus = "1.13.0"
+rand = "0.8.3"
+rand_xorshift = "0.3.0"
 
 [profile.dev]
 opt-level = 2
