--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 [dependencies]
 crossbeam = "0.8.0"
 glam = "0.15.2"
-image = "0.23.14"
 num_cpus = "1.13.0"
+png = "0.16.8"
 rand = "0.8.3"
 rand_xorshift = "0.3.0"
 
