--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 crossbeam = "0.8.0"
 glam = "0.15.2"
 num_cpus = "1.13.0"
+parking_lot = "0.11.1"
 png = "0.16.8"
 rand = "0.8.3"
 rand_xorshift = "0.3.0"
