--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2018"
 [dependencies]
 crossbeam-utils = "0.8.4"
 glam = "0.15.2"
+humantime = "2.1.0"
 num_cpus = "1.13.0"
 parking_lot = "0.11.1"
+pico-args = "0.4.1"
 png = "0.16.8"
 rand = { version = "0.8.3", default-features = false }
 rand_xorshift = "0.3.0"
